--- a/client/pages/analyses/Aoi.html
+++ b/client/pages/analyses/Aoi.html
@@ -7,90 +7,119 @@
         <th>Analysis</th>
         <td><a href="/studies/{{study._id}}/analyses/{{analysis._id}}">{{analysis.name}}</a></td>
       </tr>
+
+
+
       <tr>
         <th>Viewing Durations (ms)</th>
         <td>
-          {{#each duration in durations}}
-            {{formatNumber duration}}
-          {{/each}}
-        </td>
-      </tr>
-      <tr>
-        <th>Viewing Durations Distribution</th>
-        <td>
-          [histogram]
-        </td>
-      </tr>
-      <tr>
-        <th>Viewing Durations Descriptive Stats (HH:MM:SS.MS) [ms]</th>
-        <td>
-          <tr>
-            <th>Minimum</th>
-            <td>
-              {{#if durationMin}}
-                {{millisecondsToHMSMS durationMin}}
-                [{{formatNumber durationMin}}]
-              {{/if}}
+          <!-- <tr>
+            <td class="p-b-10">
+              {{#each duration in durations}}
+                {{formatNumber duration}}
+              {{/each}}
             </td>
-          </tr>
+          </tr> -->
+          {{> PlotHistogram x=durations name="Viewing-Durations"}}
           <tr>
-            <th>Maximum</th>
-            <td>
-              {{#if durationMax}}
-                {{millisecondsToHMSMS durationMax}}
-                [{{formatNumber durationMax}}]
-              {{/if}}
-            </td>
-          </tr>
-          <tr>
-            <th>Range</th>
-            <td>
-              {{#if durationRange}}
-                {{millisecondsToHMSMS durationRange}}
-                [{{formatNumber durationRange}}]
-              {{/if}}
-            </td>
-          </tr>
-          <tr>
-            <th>Mean</th>
-            <td>
-              {{#if durationMean}}
-                {{millisecondsToHMSMS durationMean}}
-                [{{formatNumber durationMean}}]
-              {{/if}}
-            </td>
-          </tr>
-          <tr>
-            <th>Median</th>
-            <td>
-              {{#if durationMedian}}
-                {{millisecondsToHMSMS durationMedian}}
-                [{{formatNumber durationMedian}}]
-              {{/if}}
-            </td>
+            <tr>
+              <th>n:&nbsp;</th>
+              <td>
+                {{#if durations}}
+                  {{formatNumber durations.length}}
+                {{/if}}
+              </td>
+            </tr>
+            <tr>
+              <th>Minimum:&nbsp;</th>
+              <td>
+                {{#if durationMin}}
+                  {{millisecondsToHMSMS durationMin}}
+                  [{{formatNumber durationMin}}]
+                {{/if}}
+              </td>
+            </tr>
+            <tr>
+              <th>Maximum:&nbsp;</th>
+              <td>
+                {{#if durationMax}}
+                  {{millisecondsToHMSMS durationMax}}
+                  [{{formatNumber durationMax}}]
+                {{/if}}
+              </td>
+            </tr>
+            <tr>
+              <th>Range:&nbsp;</th>
+              <td>
+                {{#if durationRange}}
+                  {{millisecondsToHMSMS durationRange}}
+                  [{{formatNumber durationRange}}]
+                {{/if}}
+              </td>
+            </tr>
+            <tr>
+              <th>Mean:&nbsp;</th>
+              <td>
+                {{#if durationMean}}
+                  {{millisecondsToHMSMS durationMean}}
+                  [{{formatNumber durationMean}}]
+                {{/if}}
+              </td>
+            </tr>
+            <tr>
+              <th>Median:&nbsp;</th>
+              <td>
+                {{#if durationMedian}}
+                  {{millisecondsToHMSMS durationMedian}}
+                  [{{formatNumber durationMedian}}]
+                {{/if}}
+              </td>
+            </tr>
+            <tr>
+              <th>Skewness:&nbsp;</th>
+              <td>
+                {{#if durationSkewness}}
+                  {{formatNumber durationSkewness}}
+                {{/if}}
+              </td>
+            </tr>
+            <tr>
+              <th>Kurtosis:&nbsp;</th>
+              <td>
+                {{#if durationKurtosis}}
+                  {{formatNumber durationKurtosis}}
+                {{/if}}
+              </td>
+            </tr>
           </tr>
         </td>
       </tr>
 
+
+
       <tr>
         <th># of Viewings per Datafile</th>
         <td>
-          {{#each count in viewingCounts}}
-            {{formatNumber count}}
-          {{/each}}
-        </td>
-      </tr>
-      <tr>
-        <th># of Viewings per Datafile Distribution</th>
-        <td>
-          [histogram]
-        </td>
-      </tr>
-      <tr>
-        <th># of Viewings per Datafile Descriptive Stats</th>
-        <td>
+          <!-- <tr>
+            <td class="p-b-10">
+              {{#each count in viewingCounts}}
+                {{formatNumber count}}
+              {{/each}}
+            </td>
+          </tr> -->
+
+          {{> PlotHistogram data=viewingCountsData name="Viewing-Counts"}}
+
           <tr>
-            <th>Minimum</th>
+            <th>n:&nbsp;</th>
+            <td>
+              {{#if viewingCounts}}
+                {{formatNumber viewingCounts.length}}
+              {{/if}}
+            </td>
+          </tr>
+          <tr>
+            <th>Minimum:&nbsp;</th>
             <td>
               {{#if viewingCountsMin}}
                 {{formatNumber viewingCountsMin}}
@@ -98,7 +127,7 @@
             </td>
           </tr>
           <tr>
-            <th>Maximum</th>
+            <th>Maximum:&nbsp;</th>
             <td>
               {{#if viewingCountsMax}}
                 {{formatNumber viewingCountsMax}}
@@ -106,7 +135,7 @@
             </td>
           </tr>
           <tr>
-            <th>Range</th>
+            <th>Range:&nbsp;</th>
             <td>
               {{#if viewingCountsRange}}
                 {{formatNumber viewingCountsRange}}
@@ -114,7 +143,7 @@
             </td>
           </tr>
           <tr>
-            <th>Mean</th>
+            <th>Mean:&nbsp;</th>
             <td>
               {{#if viewingCountsMean}}
                 {{formatNumber viewingCountsMean}}
@@ -122,15 +151,33 @@
             </td>
           </tr>
           <tr>
-            <th>Median</th>
+            <th>Median:&nbsp;</th>
             <td>
               {{#if viewingCountsMedian}}
                 {{formatNumber viewingCountsMedian}}
               {{/if}}
             </td>
           </tr>
+          <tr>
+            <th>Skewness:&nbsp;</th>
+            <td>
+              {{#if viewingCountsSkewness}}
+                {{formatNumber viewingCountsSkewness}}
+              {{/if}}
+            </td>
+          </tr>
+          <tr>
+            <th>Kurtosis:&nbsp;</th>
+            <td>
+              {{#if viewingCountsKurtosis}}
+                {{formatNumber viewingCountsKurtosis}}
+              {{/if}}
+            </td>
+          </tr>
         </td>
       </tr>
+
+
 
     </tbody>
   </table>
