--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -51,7 +51,16 @@
       </div>
     </div>
 
-    <h4>Viewings {{#if viewings.count}}({{viewings.count}}){{/if}}</h4>
+    <h4>
+      Viewings {{#if viewings.count}}({{viewings.count}}){{/if}}
+
+      {{#unless makeViewingsJobsComplete}}
+        <span class="label label-default">Creating Viewings
+          {{makeViewingsJobsProgress}}%
+          <i class="fa fa-spinner fa-pulse fa-fw"></i>
+        </span>
+      {{/unless}}
+    </h4>
 
     {{> tabular table=TabularTables.ViewingsByAnalysisId selector=selector class="table table-striped table-bordered"}}
   {{/if}}
