--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -8,6 +8,12 @@
           &nbsp;<a href="#" class="update-analysis"><i class="fa fa-pencil"></i></a>
         {{/unless}}
       {{/if}}
+      {{#unless makeViewingsJobsComplete}}
+        <span class="label label-default">Creating Viewings
+          {{makeViewingsJobsProgress}}%
+          <i class="fa fa-spinner fa-pulse fa-fw"></i>
+        </span>
+      {{/unless}}
     </h3>
 
     <p>{{analysis.desc}}</p>
@@ -37,7 +43,6 @@
         </div>
       </h4>
     </div>
-    <!-- {{json showDatafileIds}} -->
 
     <div class="selector-set">
       <h4>
@@ -240,10 +245,6 @@
           </span>
         {{/unless}}
       </h4>
-
-      <!-- {{#each viewing in viewings}}
-        {{json viewing}}
-      {{/each}} -->
 
       {{> tabular table=TabularTables.ViewingsByAnalysisId selector=selector class="table table-striped table-bordered"}}
     {{/if}}
