--- a/client/pages/aois/Aoi.html
+++ b/client/pages/aois/Aoi.html
@@ -1,13 +1,20 @@
 <template name="Aoi">
   {{#if $.Session.get 'updateAoi'}}
     {{> UpdateAoi aoi=aoi}}
+  {{else}}
+    <h3 class="m-t-0">{{aoi.name}}
+      {{#if aoi.hasPermission 'update'}}
+        {{#unless $.Session.get 'updateAoi'}}
+          &nbsp;<a href="#" class="update-aoi"><i class="fa fa-pencil"></i></a>
+        {{/unless}}
+      {{/if}}
+    </h3>
+    <div>{{json aoi}}</div>
   {{/if}}
-  <h3 class="m-t-0">{{aoi.name}}
-    {{#if aoi.hasPermission 'update'}}
-      {{#unless $.Session.get 'updateAoi'}}
-        &nbsp;<a href="#" class="update-aoi"><i class="fa fa-pencil"></i></a>
-      {{/unless}}
-    {{/if}}
-  </h3>
-  <div>{{json aoi}}</div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <img src="{{fileURL aoi.image}}" class="image-full-width">
+    </div>
+  </div>
 </template>
