--- a/client/pages/datafiles/datafile.html
+++ b/client/pages/datafiles/datafile.html
@@ -1,12 +1,13 @@
 <template name="Datafile">
   {{#if $.Session.get 'updateDatafile'}}
     {{> UpdateDatafile datafile=datafile}}
+  {{else}}
+    <h3 class="m-t-0">{{datafile.name}}
+      {{#if datafile.hasPermission 'update'}}
+        {{#unless $.Session.get 'updateDatafile'}}
+          &nbsp;<a href="#" class="update-datafile"><i class="fa fa-pencil"></i></a>
+        {{/unless}}
+      {{/if}}
+    </h3>
   {{/if}}
-  <h3 class="m-t-0">{{datafile.name}}
-    {{#if datafile.hasPermission 'update'}}
-      {{#unless $.Session.get 'updateDatafile'}}
-        &nbsp;<a href="#" class="update-datafile"><i class="fa fa-pencil"></i></a>
-      {{/unless}}
-    {{/if}}
-  </h3>
 </template>
