plotly starting to work, no animations yet

--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -39,10 +39,10 @@
     </p>
 
     <h4>Instantaneous Convex Hull Areas</h4>
-    <p>...</p>
+    {{> ConvexHullInstantaneous viewingId=viewing._id}}
 
     <h4>Cummulative Convex Hull Areas</h4>
-    <p>...</p>
+    {{> ConvexHullCummulative viewingId=viewing._id}}
 
     <h4>Instantaneous Scanpath Length</h4>
     <p>...</p>
