--- a/client/pages/analyses/NewAnalysis.html
+++ b/client/pages/analyses/NewAnalysis.html
@@ -10,6 +10,7 @@
         {{> afQuickField name="desc"}}
         {{> afQuickField name="analysisTypes"}}
         {{> afQuickField name="period"}}
+        {{> afQuickField name="centroidPeriod"}}
         {{> afQuickField name="viewingGap"}}
         {{> afQuickField name="minViewingTime"}}
         {{> afQuickField name="studyId"}}
