--- a/client/pages/analyses/UpdateAnalysis.html
+++ b/client/pages/analyses/UpdateAnalysis.html
@@ -13,6 +13,7 @@
         {{> afQuickField name="desc"}}
         {{> afQuickField name="analysisTypes" type="hidden"}}
         {{> afQuickField name="period" type="hidden"}}
+        {{> afQuickField name="centroidPeriod" type="hidden"}}
         {{> afQuickField name="viewingGap" type="hidden"}}
         {{> afQuickField name="minViewingTime" type="hidden"}}
         {{> afQuickField name="studyId" type="hidden"}}
